enlace de todas las paginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -130,7 +130,7 @@
       <div class="container">
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+            <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Inicio</a></li>
             <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
             <li class="nav-item"><a href="registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
             <li class="nav-item"><a href="galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
