arreglo del proyecto con BT

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -66,16 +66,16 @@
        <div class="col-lg-4 mb-4">
          <a href="#!" data-bs-toogle="modal" data-bs-target="#modalImage1">
          </a>
-         <img class="w-100 mb-4 rounded" src="./img/arreglo1.jpg" alt=""> 
-         <img class="w-100 mb-4 rounded" src="./img/arreglo2.jpg" alt="">
+         <img class="w-100 mb-4 rounded" src="/img/arreglo1.jpg" alt=""> 
+         <img class="w-100 mb-4 rounded" src="/img/arreglo2.jpg" alt="">
        </div>
         <div class="col-lg-4 mb-5">
-         <img class="w-100 mb-4 rounded" src="./img/arreglo4.jpg" alt="">
-         <img class="w-100 mb-4 rounded" src="./img/arreglo3.jpg" alt="">         
+         <img class="w-100 mb-4 rounded" src="/img/arreglo4.jpg" alt="">
+         <img class="w-100 mb-4 rounded" src="/img/arreglo3.jpg" alt="">         
         </div>
        <div class="col-lg-4 mb-5">
-        <img class="w-100 mb-4 rounded" src="./img/arreglo5.jpg" alt=""> 
-        <img class="w-100 mb-4 rounded" src="./img/arreglo6.jpg" alt="">
+        <img class="w-100 mb-4 rounded" src="/img/arreglo5.jpg" alt=""> 
+        <img class="w-100 mb-4 rounded" src="/img/arreglo6.jpg" alt="">
        </div>                   
     </div>
 
@@ -89,7 +89,7 @@
          class="modal false" id="modalImage1">
          <div class="modal-dialog modal-lg modal-dialog-centered">
            <div class="modal-conten">  
-             <img src="./img/arreglo1.jpg" alt="">     
+             <img src="/img/arreglo1.jpg" alt="">     
            </div>
          </div>
      </div>
