--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <main>           
         <div class="px-4 py-5 my-5 text-center">
-          <img class="d-block mx-auto mb-4" src="/img/logo.svg" alt="" width="72" height="57">
+          <img class="d-block mx-auto mb-4" src="./img/logo.svg" alt="" width="72" height="57">
           <h1 class="display-5 fw-bold">Magic Balloon</h1>
           <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Nuestro equipo de artistas trabajará estrechamente con usted para crear un diseño personalizado para su fiesta, en cualquier estilo y color que esté buscando. Le ayudaremos a proporcionar ideas y a dar vida a estas creaciones únicas para su evento, para llevar lo ordinario a lo extraordinario...</p>
@@ -97,10 +97,10 @@
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Inicio</a></li>
-      <li class="nav-item"><a href="/pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
-      <li class="nav-item"><a href="/pages/registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
-      <li class="nav-item"><a href="/pages/galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
-      <li class="nav-item"><a href="/pages/productos.html" class="nav-link px-2 text-muted">Productos</a></li>
+      <li class="nav-item"><a href="./pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+      <li class="nav-item"><a href="./pages/registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
+      <li class="nav-item"><a href="./pages/galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
+      <li class="nav-item"><a href="./pages/productos.html" class="nav-link px-2 text-muted">Productos</a></li>
     </ul>
     <p class="text-center text-muted">&copy; 2022 Magic Balloon, Inc</p>
   </footer>
