--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
               </li>              
               <li class="nav-item">
-                <a class="nav-link" href="/pages/registrate.html">Registrate</a>
+                <a class="nav-link" href="./pages/registrate.html">Registrate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+                <a class="nav-link" href="./pages/galeria.html">Galeria</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/productos.html">Productos</a>
+                <a class="nav-link" href="./pages/productos.html">Productos</a>
               </li>
             </ul>
             <form class="d-flex">
