--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/contacto.html">Contacto</a>
@@ -96,7 +96,7 @@
  <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+      <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Inicio</a></li>
       <li class="nav-item"><a href="./pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
       <li class="nav-item"><a href="./pages/registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
       <li class="nav-item"><a href="./pages/galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
