--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -156,10 +156,10 @@
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Inicio</a></li>
-        <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
-        <li class="nav-item"><a href="registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
-        <li class="nav-item"><a href="galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
-        <li class="nav-item"><a href="productos.html" class="nav-link px-2 text-muted">Productos</a></li>
+        <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+        <li class="nav-item"><a href="./registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
+        <li class="nav-item"><a href="./galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
+        <li class="nav-item"><a href="./productos.html" class="nav-link px-2 text-muted">Productos</a></li>
       </ul>
       <p class="text-center text-muted">&copy; 2022 Magic Balloon, Inc</p>
     </footer>
