--- a/pages/productos.html
+++ b/pages/productos.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-1">
         <div class="container">
           <a class="navbar-brand" href="#">
-              <img src="./img/logo.svg" alt="logo" width="100px">
+              <img src=".img/logo.svg" alt="logo" width="100px">
           </a>
           <button class="navbar-toggler"
           type="button" 
@@ -30,10 +30,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>              
               <li class="nav-item">
                 <a class="nav-link" href="registrate.html">Registrate</a>
@@ -76,7 +76,7 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto1.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto1.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -97,7 +97,7 @@
                         <!-- Sale badge-->
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto2.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto2.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -127,7 +127,7 @@
                         <!-- Sale badge-->
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto3.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto3.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -147,7 +147,7 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto4.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto4.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -176,7 +176,7 @@
                         <!-- Sale badge-->
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto5.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto5.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -196,7 +196,7 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto6.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto6.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -217,7 +217,7 @@
                         <!-- Sale badge-->
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto7.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto7.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -245,7 +245,7 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="/img/producto8.jpg" alt="..." />
+                        <img class="card-img-top" src="../img/producto8.jpg" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -280,11 +280,11 @@
  <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Inicio</a></li>
-      <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
-      <li class="nav-item"><a href="registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
-      <li class="nav-item"><a href="galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
-      <li class="nav-item"><a href="productos.html" class="nav-link px-2 text-muted">Productos</a></li>
+      <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+      <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+      <li class="nav-item"><a href="./registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
+      <li class="nav-item"><a href="./galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
+      <li class="nav-item"><a href="./productos.html" class="nav-link px-2 text-muted">Productos</a></li>
     </ul>
     <p class="text-center text-muted">&copy; 2022 Magic Balloon, Inc</p>
   </footer>
