--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-1">
         <div class="container">
           <a class="navbar-brand" href="#">
-              <img src="/img/logo.svg" alt="logo" width="100px">
+              <img src="../img/logo.svg" alt="logo" width="100px">
           </a>
           <button class="navbar-toggler"
           type="button" 
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -66,16 +66,16 @@
        <div class="col-lg-4 mb-4">
          <a href="#!" data-bs-toogle="modal" data-bs-target="#modalImage1">
          </a>
-         <img class="w-100 mb-4 rounded" src="./img/arreglo1.jpg" alt=""> 
-         <img class="w-100 mb-4 rounded" src="./img/arreglo2.jpg" alt="">
+         <img class="w-100 mb-4 rounded" src="../img/arreglo1.jpg" alt=""> 
+         <img class="w-100 mb-4 rounded" src="../img/arreglo2.jpg" alt="">
        </div>
         <div class="col-lg-4 mb-5">
-         <img class="w-100 mb-4 rounded" src="./img/arreglo4.jpg" alt="">
-         <img class="w-100 mb-4 rounded" src="./img/arreglo3.jpg" alt="">         
+         <img class="w-100 mb-4 rounded" src="../img/arreglo4.jpg" alt="">
+         <img class="w-100 mb-4 rounded" src="../img/arreglo3.jpg" alt="">         
         </div>
        <div class="col-lg-4 mb-5">
-        <img class="w-100 mb-4 rounded" src="./img/arreglo5.jpg" alt=""> 
-        <img class="w-100 mb-4 rounded" src="./img/arreglo6.jpg" alt="">
+        <img class="w-100 mb-4 rounded" src="../img/arreglo5.jpg" alt=""> 
+        <img class="w-100 mb-4 rounded" src="../img/arreglo6.jpg" alt="">
        </div>                   
     </div>
 
@@ -89,7 +89,7 @@
          class="modal false" id="modalImage1">
          <div class="modal-dialog modal-lg modal-dialog-centered">
            <div class="modal-conten">  
-             <img src="./img/arreglo1.jpg" alt="">     
+             <img src="../img/arreglo1.jpg" alt="">     
            </div>
          </div>
      </div>
@@ -155,7 +155,7 @@
    <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+        <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Inicio</a></li>
         <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
         <li class="nav-item"><a href="./registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
         <li class="nav-item"><a href="./galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
