--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-1">
         <div class="container">
           <a class="navbar-brand" href="#">
-              <img src="./img/logo.svg" alt="logo" width="100px">
+              <img src="../img/logo.svg" alt="logo" width="100px">
           </a>
           <button class="navbar-toggler"
           type="button" 
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link"  href="../index.html">Inicio</a>
+                <a class="nav-link"  href="/index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contacto.html">Contacto</a>
