--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link"  href="/index.html">Inicio</a>
+                <a class="nav-link"  href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -104,7 +104,7 @@
  <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+      <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
       <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
       <li class="nav-item"><a href="registrate.html" class="nav-link px-2 text-muted">Registrate</a></li>
       <li class="nav-item"><a href="galeria.html" class="nav-link px-2 text-muted">Galeria</a></li>
