--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         <div class="container col-xxl-8 px-4 py-5">
           <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-              <img src="./img/arreglos700.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+              <img src="./img/producto9.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
             </div>
             <div class="col-lg-6">
               <h1 class="display-5 fw-bold lh-1 mb-3">Arreglos personalizados</h1>
               <p class="lead">¡Nada alegra mas una celebración como los globos! Nos especializamos en la creación de increíbles diseños de globos de alta gama, esculturas, columnas, ramos, guirnaldas y centros de mesa para todo tipo de eventos. Nuestros servicios de decoración con globos, con sede en Neuquen, van desde bodas, grandes inauguraciones, graduaciones, cumpleaños, eventos corporativos y más. Nuestro equipo de artistas trabajará estrechamente con usted para crear un diseño personalizado para su fiesta, en cualquier estilo y color que esté buscando. Le ayudaremos a proporcionar ideas y a dar vida a estas creaciones únicas para su evento, para llevar lo ordinario a lo extraordinario...</p>
               <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Productos</button>
+                <button type="button" class="btn btn-secondary btn-lg px-4 me-md-2"><a href="./pages/productos.html">Productos</a></button>
               </div>
             </div>
           </div>
