--- a/pages/productos.html
+++ b/pages/productos.html
@@ -75,35 +75,32 @@
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Product image-->
+                        <!-- imagen del producto-->
                         <img class="card-img-top" src="../img/producto1.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- Detalle del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
+                                <!-- Nombre del producto-->
                                 <h5 class="fw-bolder">Arreglo</h5>
-                                <!-- Product price-->
+                                <!-- Precio-->
                                 $4000.00 - $8000.00
                             </div>
-                        </div>
-                        <!-- Product actions-->
+                        </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- Sale badge-->
+                    <div class="card h-100">                        
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
-                        <!-- Product image-->
+                        <!-- Imagen del producto-->
                         <img class="card-img-top" src="../img/producto2.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- detalles del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">Especial</h5>
-                                <!-- Product reviews-->
+                                <!-- Nombre del producto-->
+                                <h5 class="fw-bolder">Especial</h5>                                
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
@@ -111,34 +108,31 @@
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
                                 </div>
-                                <!-- Product price-->
+                                <!-- Precio-->
                                 <span class="text-muted text-decoration-line-through">$5000.00</span>
                                 $3500.00
                             </div>
-                        </div>
-                        <!-- Product actions-->
+                        </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- Sale badge-->
+                    <div class="card h-100">                       
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
-                        <!-- Product image-->
+                        <!-- Imagen del producto-->
                         <img class="card-img-top" src="../img/producto3.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- Detalles del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
+                                <!-- Nombre del producto-->
                                 <h5 class="fw-bolder">Bouquet</h5>
-                                <!-- Product price-->
+                                <!-- Precio-->
                                 <span class="text-muted text-decoration-line-through">$5000.00</span>
                                 $2500.00
                             </div>
-                        </div>
-                        <!-- Product actions-->
+                        </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
@@ -146,14 +140,13 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Product image-->
+                        <!-- Imagen del producto-->
                         <img class="card-img-top" src="../img/producto4.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- Detalles del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">Arco Globos</h5>
-                                <!-- Product reviews-->
+                                <!-- Nombre del producto-->
+                                <h5 class="fw-bolder">Arco Globos</h5>                                
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
@@ -161,33 +154,30 @@
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
                                 </div>
-                                <!-- Product price-->
+                                <!-- Precio-->
                                 $4000.00
                             </div>
-                        </div>
-                        <!-- Product actions-->
+                        </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- Sale badge-->
+                    <div class="card h-100">                        
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
-                        <!-- Product image-->
+                        <!-- Imagen del producto-->
                         <img class="card-img-top" src="../img/producto5.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- Detalle del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
+                                <!-- Nombre del producto-->
                                 <h5 class="fw-bolder">Arco</h5>
-                                <!-- Product price-->
+                                <!-- Precio del producto-->
                                 <span class="text-muted text-decoration-line-through">$6000.00</span>
                                 $7500.00
                             </div>
-                        </div>
-                        <!-- Product actions-->
+                        </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
@@ -195,35 +185,33 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Product image-->
+                        <!-- Imagen del producto-->
                         <img class="card-img-top" src="../img/producto6.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- Detalles del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
+                                <!-- Nombre del producto-->
                                 <h5 class="fw-bolder">Oso</h5>
-                                <!-- Product price-->
+                                <!-- Precio del producto-->
                                 $1200.00 - $2800.00
                             </div>
-                        </div>
-                        <!-- Product actions-->
+                        </div>                       
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- Sale badge-->
+                    <div class="card h-100">                        
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Oferta</div>
                         <!-- Product image-->
                         <img class="card-img-top" src="../img/producto7.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- Detalles del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
+                                <!-- Nombre del producto-->
                                 <h5 class="fw-bolder">Bouquet 32</h5>
-                                <!-- Product reviews-->
+                                <!-- Resena de producto-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
@@ -231,12 +219,12 @@
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
                                 </div>
-                                <!-- Product price-->
+                                <!-- Precio del producto-->
                                 <span class="text-muted text-decoration-line-through">$2000.00</span>
                                 $1800.00
                             </div>
                         </div>
-                        <!-- Product actions-->
+                        <!-- Acciones-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
@@ -244,14 +232,14 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Product image-->
+                        <!-- Imagen de producto-->
                         <img class="card-img-top" src="../img/producto8.jpg" alt="..." />
-                        <!-- Product details-->
+                        <!-- Detalles del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
+                                <!-- Nombre del producto-->
                                 <h5 class="fw-bolder">Sixteen</h5>
-                                <!-- Product reviews-->
+                                <!-- resenas-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
@@ -259,11 +247,11 @@
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
                                 </div>
-                                <!-- Product price-->
+                                <!-- Precio productos-->
                                 $3000.00
                             </div>
                         </div>
-                        <!-- Product actions-->
+                        <!-- Accion del producto-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                         </div>
