--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,10 +7,13 @@
     
     <title>Magic Balloon</title>
 
-    <!--Bootstrap CSS-->
 
+    <!--Bootstrap CSS-->
+ 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-1">
@@ -87,7 +90,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center" ><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -114,7 +117,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -134,7 +137,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -159,7 +162,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -179,7 +182,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -197,7 +200,7 @@
                             </div>
                         </div>                       
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -226,7 +229,7 @@
                         </div>
                         <!-- Acciones-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -253,7 +256,7 @@
                         </div>
                         <!-- Accion del producto-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
                         </div>
                     </div>
                 </div>
