--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Magic Balloon</title>
-    <link rel="stylesheet" href="css/style.css"/> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css"/> 
+    
 </head>
 <body>
 
@@ -67,16 +68,16 @@
        <div class="col-lg-4 mb-4">
          <a href="#!" data-bs-toogle="modal" data-bs-target="#modalImage1">
          </a>
-         <img class="w-100 mb-4 rounded" src="../img/producto1.jpg" alt=""> 
-         <img class="w-100 mb-4 rounded" src="../img/producto2.jpg" alt="">
+         <img class="w-100 mb-4 rounded diseno" src="../img/producto1.jpg" alt=""> 
+         <img class="w-100 mb-4 rounded " src="../img/producto2.jpg" alt="">
        </div>
         <div class="col-lg-4 mb-5">
-         <img class="w-100 mb-4 rounded" src="../img/producto3.jpg" alt="">
-         <img class="w-100 mb-4 rounded" src="../img/producto4.jpg" alt="">         
+         <img class="w-100 mb-4 rounded " src="../img/producto3.jpg" alt="">
+         <img class="w-100 mb-4 rounded diseno" src="../img/producto4.jpg" alt="">         
         </div>
        <div class="col-lg-4 mb-5">
-        <img class="w-100 mb-4 rounded" src="../img/producto5.jpg" alt=""> 
-        <img class="w-100 mb-4 rounded" src="../img/producto6.jpg" alt="">
+        <img class="w-100 mb-4 rounded diseno" src="../img/producto5.jpg" alt=""> 
+        <img class="w-100 mb-4 rounded " src="../img/producto6.jpg" alt="">
        </div>                   
     </div>
   </div>  
