--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Magic Balloon</title>
-
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -89,7 +90,7 @@
                 <input type="checkbox" value="remember-me"> Recordarme
               </label>
             </div>
-            <button class="w-100 btn btn-lg btn-secondary" type="submit">Registrarse</button>
+            <button class="w-100 btn btn-lg btn-secondary bordes" type="submit">Registrarse</button>
             <hr class="my-4">
             <small class="text-muted">Al hacer click en Registrarse, Acepta los terminos de uso.</small>
           </form>
