--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name:="keywords" content="Glovos, Arreglos, Detalles, Regalos, Sorpresas">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Magic Balloon</title>
