--- a/pages/productos.html
+++ b/pages/productos.html
@@ -91,7 +91,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center" ><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center" ><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                             </div>
                         </div>                        
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                             </div>
                         </div>                       
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                         </div>
                         <!-- Acciones-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                         </div>
                         <!-- Accion del producto-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="#">Comprar</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto transicion" href="https://api.whatsapp.com/send?phone=542996227795">Comprar</a></div>
                         </div>
                     </div>
                 </div>
