--- a/pages/productos.html
+++ b/pages/productos.html
@@ -149,7 +149,7 @@
                         <!-- Detalles del producto-->
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Nombre del producto-->
+                                <!-- Nombre de producto-->
                                 <h5 class="fw-bolder">Arco Globos</h5>                                
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
